# SalaryManagementSystem

./: CMakeLists.txt  Employee.cpp  Employee.h  Month.cpp  Month.h  README.md  SalaryManagenment.cpp  SalaryManagenment.h  addEmployeewindow.cpp  addEmployeewindow.h  addEmployeewindow.ui  createMonthwindow.h  createMonthwindow.ui  createmonthwindow.cpp  default.qrc  deleteemployeewindow.cpp  deleteemployeewindow.h  deleteemployeewindow.ui  findemployeewindow.cpp  findemployeewindow.h  findemployeewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  outputsalarywindow.cpp  outputsalarywindow.h  outputsalarywindow.ui  updateemployeewindow.cpp  updateemployeewindow.h  updateemployeewindow.ui
